# layla

./: README.md  pyproject.toml
layla/: __init__.py  app.py  cli.py
layla/templates/: blog.html  index.html  prism.js  stylesheet.css
