[tool.poetry]
name = "layla"
version = "0.1.0"
description = ""
authors = ["Gareth Heath"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.7"
jinja2 = "^3.1.4"
click = "^8.1.7"

[tool.poetry.scripts]
layla = "layla:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
